--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.7.4",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
     "react-router-dom": "^6.12.0",
     "react-select": "^5.7.3",
     "uuid": "^9.0.0"
